some new letters

--- a/content/D.tex
+++ b/content/D.tex
@@ -2,43 +2,43 @@
 
 Da /da/ — yes
 
-Dabi /dabɪ/ — for, in purpose
+Dabi /dabI/ — for, in purpose
 
 Dädä /d’ædæ/ — uncle, man
 
-Dalina /dalɪna/ —
+Dalina /dalIna/ —
 
-Daljko /daʎko/
+Daljko /daLko/
 
-Daljkyǐ /daʎkɨj/
+Daljkyǐ /daLk1j/
 
-Daljnica /daʎnɪt͡sa/
+Daljnica /daLnI\t{ts}a/
 
-Daljšeǐ /daʎʂɛj/
+Daljšeǐ /daL\:sEj/
 
-Daljšeǐ /daʎʂɛj/
+Daljšeǐ /daL\:sEj/
 
-Dannik /dannɪk/
+Dannik /dannIk/
 
 Dar /dar/ — present
 
-Daritelj /darɪtɛʎ/
+Daritelj /darItEL/
 
-Darovač /darovat͡ʃ/
+Darovač /darova\t{tS}/
 
-Darovane /darovanɛ/
+Darovane /darovanE/
 
-Darovati /darovatɪ/
+Darovati /darovatI/
 
-Datcy /datt͡sɨ/
+Datcy /dat\t{ts}1/
 
-Datek /datɛk/
+Datek /datEk/
 
-Dati /datɪ/ — to give
+Dati /datI/ — to give
 
-Davati /davatɪ/ — to give
+Davati /davatI/ — to give
 
-Davnina /davnɪna/
+Davnina /davnIna/
 
 Davno /davno/
 
@@ -46,346 +46,346 @@ Davnostj /davnosc/
 
 Davnostj /davnosc/
 
-Davnyǐ /davnɨj/
+Davnyǐ /davn1j/
 
-Davnyǐ /davnɨj/
+Davnyǐ /davn1j/
 
-Daže /daʐɛ/
+Daže /da\textctz  E/
 
-Dčera /dt͡ʃɛra/
+Dčera /d\t{tS}Era/
 
-De /dɛ/ — where
+De /dE/ — where
 
-Děd /dᵻd/
+Děd /d1d/
 
-Dědič /dᵻdɪt͡ʃ/
+Dědič /d1dI\t{tS}/
 
-Dědičnostj /dᵻdɪt͡ʃnosc/
+Dědičnostj /d1dI\t{tS}nosc/
 
-Dědičnyǐ /dᵻdɪt͡ʃnɨj/
+Dědičnyǐ /d1dI\t{tS}n1j/
 
-Dědičovati /dᵻdɪt͡ʃovatɪ/
+Dědičovati /d1dI\t{tS}ovatI/
 
-Dědičstvo /dᵻdɪt͡ʃstvo/
+Dědičstvo /d1dI\t{tS}stvo/
 
-Dědičstvo /dᵻdɪt͡ʃstvo/
+Dědičstvo /d1dI\t{tS}stvo/
 
-Dědka /dᵻdka/
+Dědka /d1dka/
 
-Deđlo /dɛd͡ʑlo/
+Deđlo /dE\t{d \textctz}lo/
 
-Děduška /dᵻduʂka/
+Děduška /d1du\:ska/
 
-Děǐstvïë /dᵻjstv’e/
+Děǐstvïë /d1jstv’e/
 
-Děǐstvo /dᵻjstvo/
+Děǐstvo /d1jstvo/
 
-Dejec /dɛʝɛt͡s/
+Dejec /dEJE\t{ts}/
 
-Dękujem /deŋkuʝɛm/
+Dękujem /deNkuJEm/
 
-Dękujemo /deŋkuʝɛmo/
+Dękujemo /deNkuJEmo/
 
-Dělene /dᵻlɛnɛ/
+Dělene /d1lEnE/
 
-Dělenïë /dᵻlɛn’e/
+Dělenïë /d1lEn’e/
 
-Děliti /dᵻlɪtɪ/
+Děliti /d1lItI/
 
-Děliti sę /dᵻlɪtɪ s’eŋ/
+Děliti sę /d1lItI s’eN/
 
-Dělo /dᵻlo/
+Dělo /d1lo/
 
-Děnar /dᵻnar/
+Děnar /d1nar/
 
-Denj /dᵻn’/ — day
+Denj /d1n’/ — day
 
-Dennica /dᵻnnɪt͡sa/
+Dennica /d1nnI\t{ts}a/
 
-Dennik /dᵻnnɪk/
+Dennik /d1nnIk/
 
-Dennyǐ /dᵻnnɨj/
+Dennyǐ /d1nn1j/
 
-Denonôčije /dᵻnonʊt͡ɕe/
+Denonôčije /d1nonU\t{tC}e/
 
-Desęt /`dɛs’eŋt/ — ten
+Desęt /`dEs’eNt/ — ten
 
-Děsętero /dᵻs’eŋtɛro/
+Děsętero /d1s’eNtEro/
 
-Desętïkråtno /dɛs’eŋcikrʌtno/
+Desętïkråtno /dEs’eNcikrAtno/
 
-Děsnak /dᵻsnak/
+Děsnak /d1snak/
 
-Děsnica /dᵻsnɪt͡sa/
+Děsnica /d1snI\t{ts}a/
 
-Děsnyǐ /dᵻsnɨj/
+Děsnyǐ /d1sn1j/
 
-Dětę /dᵻceŋ/ — child
+Dětę /d1ceN/ — child
 
-Dětina /dᵻtɪna/
+Dětina /d1tIna/
 
-Dětskyǐ /dᵻtskɨj/
+Dětskyǐ /d1tsk1j/
 
-Dětstvo /dᵻtstvo/ — childhood
+Dětstvo /d1tstvo/ — childhood
 
-Děvčina /dᵻvt͡ʃɪna/
+Děvčina /d1v\t{tS}Ina/
 
-Devět /dɛv’eŋt/ — nine
+Devět /dEv’eNt/ — nine
 
-Devětdesět /dɛv’eŋtdɛs’eŋt/ — ninety
+Devětdesět /dEv’eNtdEs’eNt/ — ninety
 
-Devętïkråtno /dɛv’eŋcikrʌtno/
+Devętïkråtno /dEv’eNcikrAtno/
 
-Devętnadesęt /dɛv’eŋtnadɛs’eŋt/ — nineteen
+Devętnadesęt /dEv’eNtnadEs’eNt/ — nineteen
 
-Devětsòt /dɛvᵻtsət/
+Devětsòt /dEv1ts8t/
 
-Devętyǐ /dɛv’eŋtɨj/
+Devętyǐ /dEv’eNt1j/
 
-Děvica /dᵻvɪt͡sa/
+Děvica /d1vI\t{ts}a/
 
 Dïavol /d’iavol/
 
-Divadlo /dɪvadlo/ — theater
+Divadlo /dIvadlo/ — theater
 
-Diviti sę /dɪvɪtɪ s’eŋ/ — to watch
+Diviti sę /dIvItI s’eN/ — to watch
 
-Divo /dɪvo/
+Divo /dIvo/
 
-Divo /dɪvo/
+Divo /dIvo/
 
-Dlä /dʎæ/ — for
+Dlä /dLæ/ — for
 
-Dlågotraǐnyǐ /dlʌɣotrajnɨj/
+Dlågotraǐnyǐ /dlAGotrajn1j/
 
-Dlånečky /dlʌnɛt͡ʃkɨ/
+Dlånečky /dlAnE\t{tS}k1/
 
-Dlånj /dlʌn’/
+Dlånj /dlAn’/
 
-Dlånj /dlʌn’/
+Dlånj /dlAn’/
 
-Dlånky /dlʌnkɨ/
+Dlånky /dlAnk1/
 
-Dněpr /dnᵻpr/
+Dněpr /dn1pr/
 
-Dnesj /dnɛs’/
+Dnesj /dnEs’/
 
-Dnešno /dnɛʂno/
+Dnešno /dnE\:sno/
 
-Dnešnyǐ /dnɛʂnɨj/ — modern, today
+Dnešnyǐ /dnE\:sn1j/ — modern, today
 
-Dněstr /dnᵻstr/
+Dněstr /dn1str/
 
-Dněstrogråd /dnᵻstroɣrʌd/
+Dněstrogråd /dn1stroGrAd/
 
 Dno /dno/
 
 Do /do/ — to
 
-Do sreštanä /do srɛʂtan’æ/ — goodbye
+Do sreštanä /do srE\:stan’æ/ — goodbye
 
-Do sůsrečy /do səsrɛt͡ʃɨ/ — goodbye
+Do sůsrečy /do s8srE\t{tS}1/ — goodbye
 
-Do viđenä /do vɪd͡ʑɛn’æ/ — goodbye
+Do viđenä /do vI\t{d \textctz}En’æ/ — goodbye
 
 Doba /doba/ — time, season
 
 Dobro /dobro/ — well, good
 
-Dobrodošli /dobrodoʂlɪ/ — welcome
+Dobrodošli /dobrodo\:slI/ — welcome
 
-Dobrojakostnyǐ /dobroʝakostnɨj/
+Dobrojakostnyǐ /dobroJakostn1j/
 
-Dobrokrytec /dobrokrɨtɛt͡s/
-Dobrorekati /dobrorɛkatɪ/
+Dobrokrytec /dobrokr1tE\t{ts}/
+Dobrorekati /dobrorEkatI/
 Dobrostj /dobrosc/
 Dobrota /dobrota/
 Dobrota /dobrota/
-Dobrovôljno /dobrovʊʎno/
-Dobrovôljnyǐ /dobrovʊʎnɨj/
-Dobryǐ /dobrɨj/
-Dočasnyǐ /dot͡ʃasnɨj/
-Docěla /dot͡sᵻla/
-Docěla /dot͡sᵻla/
-Dodatek /dodatɛk/
-Dodati /dodatɪ/
-Dodatůk /dodatək/
-Dodômu /dodʊmu/
-Dogovor /doɣovor/
+Dobrovôljno /dobrovULno/
+Dobrovôljnyǐ /dobrovULn1j/
+Dobryǐ /dobr1j/
+Dočasnyǐ /do\t{tS}asn1j/
+Docěla /do\t{ts}1la/
+Docěla /do\t{ts}1la/
+Dodatek /dodatEk/
+Dodati /dodatI/
+Dodatůk /dodat8k/
+Dodômu /dodUmu/
+Dogovor /doGovor/
 Dohod /doxod/
-Doǐdati /dojdatɪ/
+Doǐdati /dojdatI/
 Dokaz /dokaz/
-Dokonca /dokont͡sa/
-Dôl /dʊl/
-Dôlgostj /dʊlɣosc/
-Dôlgyǐ /dʊlɣɨj/
-Dolina /dolɪna/
-Dôm /dʊm/
-Domačïǐ /domat͡ɕij/
+Dokonca /dokon\t{ts}a/
+Dôl /dUl/
+Dôlgostj /dUlGosc/
+Dôlgyǐ /dUlG1j/
+Dolina /dolIna/
+Dôm /dUm/
+Domačïǐ /doma\t{tC}ij/
 Domar /domar/
-Domolübije /domoʎʊ̈bɪʝɛ/
-Domorodec /domorodɛt͡s/
-Domorodnyǐ /domorodnɨj/
-Domovina /domovɪna/
+Domolübije /domoL\:UbIJE/
+Domorodec /domorodE\t{ts}/
+Domorodnyǐ /domorodn1j/
+Domovina /domovIna/
 Don /don/
-Donec Severskyǐ /donɛt͡s sɛvɛrskɨj/
+Donec Severskyǐ /donE\t{ts} sEvErsk1j/
 Dopád /dopa: d/
-Dorečy /dorɛt͡ʃɨ/
-Dorôslaǐ /dorʊslaj/
-Doroslyǐ /doroslɨj/
-Dorostati /dorostatɪ/
-Dorôstnik /dorʊstnɪk/
-Dorozumiti /dorozumɪtɪ/
-Doslati /doslatɪ/
-Doslati sę /doslatɪ s’eŋ/
-Dostati /dostatɪ/
-Dostatočno /dostatot͡ʃno/
-Dostavec /dostavɛt͡s/
-Dověra /dovᵻra/
-Dověriti /dovᵻrɪtɪ/
-Dověriti sę /dovᵻrɪtɪ s’eŋ/
-Doviđane /dovɪd͡ʑanɛ/
-Doviđane /dovɪd͡ʑanɛ/
-Dovolj /dovoʎ/
-Dovoljno /dovoʎno/
+Dorečy /dorE\t{tS}1/
+Dorôslaǐ /dorUslaj/
+Doroslyǐ /dorosl1j/
+Dorostati /dorostatI/
+Dorôstnik /dorUstnIk/
+Dorozumiti /dorozumItI/
+Doslati /doslatI/
+Doslati sę /doslatI s’eN/
+Dostati /dostatI/
+Dostatočno /dostato\t{tS}no/
+Dostavec /dostavE\t{ts}/
+Dověra /dov1ra/
+Dověriti /dov1rItI/
+Dověriti sę /dov1rItI s’eN/
+Doviđane /dovI\t{d \textctz}anE/
+Doviđane /dovI\t{d \textctz}anE/
+Dovolj /dovoL/
+Dovoljno /dovoLno/
 Dovoz /dovoz/
-Dovožati /dovoʐatɪ/
-Dovoznyǐ /dovoznɨj/
-Dovoznyǐ /dovoznɨj/
-Dråga /drʌɣa/
-Drågocěnnyǐ /drʌɣot͡sᵻnnɨj/
-Drågyǐ /drʌɣɨj/
-Dramopisec /dramopɪsɛt͡s/
-Dranik /dranɪk/
-Drastičnyǐ /drastɪt͡ʃnɨj/
-Dręga /dr’eŋɣa/
-Dręgati /dr’eŋɣatɪ/
-Dręhlyǐ /dr’eŋxlɨj/
-Drevo /drɛvo/
-Drežŝäny /drɛʐd͡z’ænɨ/
-Drožža /droʐʐa/
-Drugar /druɣar/
-Drugostrånnyǐ /druɣostrʌnnɨj/
-Drugyǐ /druɣɨj/
-Drųhlyǐ /druŋxlɨj/
-Družina /druʐɪna/
-Družina /druʐɪna/
-Družina /druʐɪna/
-Družina /druʐɪna/
-Družinar /druʐɪnar/
-Družinar /druʐɪnar/
-Družinar /druʐɪnar/
-Družinnik /druʐɪnnɪk/
-Družinnyǐ /druʐɪnnɨj/
-Družstevnyǐ /druʐstɛvnɨj/
-Družstvo /druʐstvo/
-Dųb /duŋb/
-Dųbna /duŋbna/
-Dųbrava /duŋbrava/
+Dovožati /dovo\textctz  atI/
+Dovoznyǐ /dovozn1j/
+Dovoznyǐ /dovozn1j/
+Dråga /drAGa/
+Drågocěnnyǐ /drAGo\t{ts}1nn1j/
+Drågyǐ /drAG1j/
+Dramopisec /dramopIsE\t{ts}/
+Dranik /dranIk/
+Drastičnyǐ /drastI\t{tS}n1j/
+Dręga /dr’eNGa/
+Dręgati /dr’eNGatI/
+Dręhlyǐ /dr’eNxl1j/
+Drevo /drEvo/
+Drežŝäny /drE\textctz  \t{dz}’æn1/
+Drožža /dro\textctz  \textctz  a/
+Drugar /druGar/
+Drugostrånnyǐ /druGostrAnn1j/
+Drugyǐ /druG1j/
+Drųhlyǐ /druNxl1j/
+Družina /dru\textctz  Ina/
+Družina /dru\textctz  Ina/
+Družina /dru\textctz  Ina/
+Družina /dru\textctz  Ina/
+Družinar /dru\textctz  Inar/
+Družinar /dru\textctz  Inar/
+Družinar /dru\textctz  Inar/
+Družinnik /dru\textctz  InnIk/
+Družinnyǐ /dru\textctz  Inn1j/
+Družstevnyǐ /dru\textctz  stEvn1j/
+Družstvo /dru\textctz  stvo/
+Dųb /duNb/
+Dųbna /duNbna/
+Dųbrava /duNbrava/
 Duda /duda/
 Duh /dux/
-Důlg /dəlɣ/
-Důlžina /dəlʐɪna/
+Důlg /d8lG/
+Důlžina /d8l\textctz  Ina/
 Dunava /dunava/
-Durenj /durɛn’/
-Durnyǐ /durnɨj/
-Důržati /dərʐatɪ/
-Důržati sę /dərʐatɪ s’eŋ/
-Důržava /dərʐava/
-Důržava /dərʐava/
-Důržavlänin /dərʐavʎænɪn/
-Důržavlänka /dərʐavʎænka/
-Důržavlänskyǐ /dərʐavʎænskɨj/
-Důržavlänstvo /dərʐavʎænstvo/
-Důržavnostj /dərʐavnosc/
-Důržavnyǐ /dərʐavnɨj/
-Důržavnyǐ /dərʐavnɨj/
-Důrzkyǐ /dərzkɨj/
-Důrzostj /dərzosc/
-Důrzyǐ /dərzɨj/
-Duša /duʂa/
-Dušec /duʂɛt͡s/
-Důžđj /dəʐd͡ʒ/
-Dúžyǐ /du: ʐɨj/
+Durenj /durEn’/
+Durnyǐ /durn1j/
+Důržati /d8r\textctz  atI/
+Důržati sę /d8r\textctz  atI s’eN/
+Důržava /d8r\textctz  ava/
+Důržava /d8r\textctz  ava/
+Důržavlänin /d8r\textctz  avLænIn/
+Důržavlänka /d8r\textctz  avLænka/
+Důržavlänskyǐ /d8r\textctz  avLænsk1j/
+Důržavlänstvo /d8r\textctz  avLænstvo/
+Důržavnostj /d8r\textctz  avnosc/
+Důržavnyǐ /d8r\textctz  avn1j/
+Důržavnyǐ /d8r\textctz  avn1j/
+Důrzkyǐ /d8rzk1j/
+Důrzostj /d8rzosc/
+Důrzyǐ /d8rz1j/
+Duša /du\:sa/
+Dušec /du\:sE\t{ts}/
+Důžđj /d8\textctz  \t{dZ}/
+Dúžyǐ /du: \textctz  1j/
 Dva /dva/
-Dvadesět /dvadɛsᵻt/
-Dvadesętïročinnyǐ /dvadɛs’eŋcirot͡ʃɪnnɨj/
-Dvađy /dvad͡ʑɨ/
-Dvaǐčě /dvajt͡ʃᵻ/
-Dvanadesět /dvanadɛsᵻt/
-Dvanaǐčě /dvanajt͡ʃᵻ/
+Dvadesět /dvadEs1t/
+Dvadesętïročinnyǐ /dvadEs’eNciro\t{tS}Inn1j/
+Dvađy /dva\t{d \textctz}1/
+Dvaǐčě /dvaj\t{tS}1/
+Dvanadesět /dvanadEs1t/
+Dvanaǐčě /dvanaj\t{tS}1/
 
-Dverj /dvɛr’/ — door
+Dverj /dvEr’/ — door
 
-Dvěstě /dvᵻstᵻ/ — two hundred
+Dvěstě /dv1st1/ — two hundred
 
-Dvina Severna /dvɪna sɛvɛrna/
+Dvina Severna /dvIna sEvErna/
 
-Dvinsk /dvɪnsk/
+Dvinsk /dvInsk/
 
-Dvižota /dvɪʐota/
+Dvižota /dvI\textctz  ota/
 
-Dvôbrat /dvʊbrat/ — nephew
+Dvôbrat /dvUbrat/ — nephew
 
-Dvôglåvyǐ /dvʊɣlʌvɨj/
+Dvôglåvyǐ /dvUGlAv1j/
 
-Dvôhdnövyǐ /dvʊxdn’œvɨj/
+Dvôhdnövyǐ /dvUxdn’œv1j/
 
-Dvôhročinnyǐ /dvʊxrot͡ʃɪnnɨj/
+Dvôhročinnyǐ /dvUxro\t{tS}Inn1j/
 
-Dvôhsůtyǐ /dvʊxsətɨj/
+Dvôhsůtyǐ /dvUxs8t1j/
 
-Dvôǐnyǐ /dvʊjnɨj/
+Dvôǐnyǐ /dvUjn1j/
 
-Dvojak /dvoʝak/
+Dvojak /dvoJak/
 
-Dvojakyǐ /dvoʝakɨj/
+Dvojakyǐ /dvoJak1j/
 
-Dvôjazyčnyǐ /dvʊʝazɨt͡ʃnɨj/
+Dvôjazyčnyǐ /dvUJaz1\t{tS}n1j/
 
-Dvôjica /dvʊʝɪt͡sa/
+Dvôjica /dvUJI\t{ts}a/
 
-Dvojodušnyǐ /dvoʝoduʂnɨj/
+Dvojodušnyǐ /dvoJodu\:sn1j/
 
-Dvojokol /dvoʝokol/
+Dvojokol /dvoJokol/
 
-Dvojokolar /dvoʝokolar/
+Dvojokolar /dvoJokolar/
 
-Dvôjotòčka /dvʊʝotət͡ʃka/ — semicolon
+Dvôjotòčka /dvUJot8\t{tS}ka/ — semicolon
 
-Dvojovlåstnyǐ /dvoʝovlʌstnɨj/
+Dvojovlåstnyǐ /dvoJovlAstn1j/
 
-Dvojoženec /dvoʝoʐɛnɛt͡s/
+Dvojoženec /dvoJo\textctz  EnE\t{ts}/
 
-Dvojoženstvo /dvoʝoʐɛnstvo/
+Dvojoženstvo /dvoJo\textctz  Enstvo/
 
-Dvôkråtno /dvʊkrʌtno/
+Dvôkråtno /dvUkrAtno/
 
-Dvôkråtno /dvʊkrʌtno/
+Dvôkråtno /dvUkrAtno/
 
-Dvôkråty /dvʊkrʌtɨ/
+Dvôkråty /dvUkrAt1/
 
-Dvôkråty /dvʊkrʌtɨ/
+Dvôkråty /dvUkrAt1/
 
-Dvônogyǐ /dvʊnoɣɨj/
+Dvônogyǐ /dvUnoG1j/
 
-Dvôr /dvʊr/
+Dvôr /dvUr/
 
-Dvôrec /dvʊrɛt͡s/
+Dvôrec /dvUrE\t{ts}/
 
-Dvoróvyǐ /dvoro: vɨj/
+Dvoróvyǐ /dvoro: v1j/
 
-Dvôsestra /dvʊsɛstra/
+Dvôsestra /dvUsEstra/
 
 Dvuboǐ /dvuboj/
 
-Dvubojec /dvuboʝɛt͡s/
+Dvubojec /dvuboJE\t{ts}/
 
-Dy /dɨ/ — when
+Dy /d1/ — when
 
-Dym /dɨm/ — smoke
+Dym /d1m/ — smoke
 
-Dynä /dɨn’æ/
+Dynä /d1n’æ/
 
-Dyra /dɨra/ — hole
+Dyra /d1ra/ — hole
 
