--- a/content/U.tex
+++ b/content/U.tex
@@ -1,76 +1,141 @@
 \chapter{U u}
 
 U /u/
-U /u/
-Uběđati /ubᵻd͡ʑatɪ/
-Ubïjati /ub’iʝatɪ/
-Ubïjec /ub’iʝɛt͡s/
-Ubïjica /ub’iʝɪt͡sa/
-Ubĭti /ub’jitɪ/
-Ubïvati /ub’ivatɪ/
-Ubïvec /ub’ivɛt͡s/
-Ubogyǐ /uboɣɨj/
-Učati /ut͡ʃatɪ/
-Učęstnik /ut͡ɕeŋstnɪk/
-Učęstnik /ut͡ɕeŋstnɪk/
-Učęstůk /ut͡ɕeŋstək/
-Učęstvôvane /ut͡ɕeŋstvʊvanɛ/
-Učęstvovati /ut͡ɕeŋstvovatɪ/
-Učilišto /ut͡ʃɪlɪʂto/
-Učïniti /ut͡ɕinɪtɪ/
-Učitelj /ut͡ʃɪtɛʎ/
-Udača /udat͡ʃa/
-Udar /udar/
-Udiv /udɪv/
-Ufa /ufa/
-Uglěd /uɣlᵻd/
-Ugovor /uɣovor/
-Uho /uxo/
-Uǐ /uj/
-Ujityǐ /uʝɪtɨj/
-Uklad /uklad/
-Ukor /ukor/
-Ukraĭna /ukrajina/
-Ukraĭnskyǐ /ukrajinskɨj/
-Ulica /ulɪt͡sa/
-Ulita /ulɪta/
-Ulitka /ulɪtka/
-Ulj /uʎ/
-Uljnik /uʎnɪk/
-Um /um/
-Umërati /um’eratɪ/
-Umetnostj /umɛtnosc/
-Umnyǐ /umnɨj/
-Umořati /umor̝atɪ/
-Umožnati /umoʐnatɪ/
-Unija /unɪʝa/
-Upati /upatɪ/
-Uporędůk /upor’eŋdək/
-Upotrěbovati /upotrᵻbovatɪ/
-Upovati /upovatɪ/
-Upozorene /upozorɛnɛ/
-Upravitelj /upravɪtɛʎ/
-Upred /uprɛd/
-Upredu /uprɛdu/
-Uproštenïë /uproʂtɛn’ie/
-Upůlno /upəlno/
-Uran /uran/
-Urędene /ur’eŋdɛnɛ/
-Urędnica /ur’eŋdnɪt͡sa/
-Urędnik /ur’eŋdnɪk/
-Urędnyǐ /ur’eŋdnɨj/
-Urędovati /ur’eŋdovatɪ/
-Urođaǐ /urod͡ʑaj/
-Uspěh /uspᵻx/
-Ustanova /ustanova/
-Ustïë /uscie/
-Usto /usto/
-Usto /usto/
-Usto /usto/
-Uštůrb /uʂtərb/
-Utro /utro/
-Utvor /utvor/
-Uvědomiti /uvᵻdomɪtɪ/
-Uvod /uvod/
-Užas /uʐas/
-Užasnyǐ /uʐasnɨj/
+
+Uběđati \textipa{/ub1\t{d \textctz}atI/}
+
+Ubïjati \textipa{/ub’iJatI/}
+
+Ubïjec \textipa{/ub’iJE\t{ts}/}
+
+Ubïjica \textipa{/ub’iJI\t{ts}a/}
+
+Ubĭti \textipa{/ub’jitI/}
+
+Ubïvati \textipa{/ub’ivatI/}
+
+Ubïvec \textipa{/ub’ivE\t{ts}/}
+
+Ubogyǐ \textipa{/uboG1j/}
+
+Učati \textipa{/u\t{tS}atI/}
+
+Učęstnik \textipa{/u\t{tC}eNstnIk/}
+
+Učęstůk \textipa{/u\t{tC}eNst8k/}
+
+Učęstvôvane \textipa{/u\t{tC}eNstvUvanE/}
+
+Učęstvovati \textipa{/u\t{tC}eNstvovatI/}
+
+Učilišto \textipa{/u\t{tS}IlI\:sto/}
+
+Učïniti \textipa{/u\t{tC}inItI/}
+
+Učitelj \textipa{/u\t{tS}ItEL/}
+
+Udača \textipa{/uda\t{tS}a/}
+
+Udar \textipa{/udar/}
+
+Udiv \textipa{/udIv/}
+
+Ufa \textipa{/ufa/}
+
+Uglěd \textipa{/uGl1d/}
+
+Ugovor \textipa{/uGovor/}
+
+Uho \textipa{/uxo/}
+
+Uǐ \textipa{/uj/}
+
+Ujityǐ \textipa{/uJIt1j/}
+
+Uklad \textipa{/uklad/}
+
+Ukor \textipa{/ukor/}
+
+Ukraĭna \textipa{/ukraJina/}
+
+Ukraĭnskyǐ \textipa{/ukraJinsk1j/}
+
+Ulica \textipa{/ulI\t{ts}a/}
+
+Ulita \textipa{/ulIta/}
+
+Ulitka \textipa{/ulItka/}
+
+Ulj \textipa{/uL/}
+
+Uljnik \textipa{/uLnIk/}
+
+Um \textipa{/um/}
+
+Umërati \textipa{/um’eratI/}
+
+Umetnostj \textipa{/umEtnosc/}
+
+Umnyǐ \textipa{/umn1j/}
+
+Umořati \textipa{/umo\*{r}atI/}
+	
+Umožnati \textipa{/umo\:znatI/}
+
+Unija \textipa{/unIJa/}
+
+Upati \textipa{/upatI/}
+
+Uporędůk \textipa{/upor’eNd8k/}
+
+Upotrěbovati \textipa{/upotr1bovatI/}
+
+Upovati \textipa{/upovatI/}
+
+Upozorene \textipa{/upozorEnE/}
+
+Upravitelj \textipa{/upravItEL/}
+
+Upred \textipa{/uprEd/}
+
+Upredu \textipa{/uprEdu/}
+
+Uproštenïë \textipa{/upro\:stEn’ie/}
+
+Upůlno \textipa{/up8lno/}
+
+Uran \textipa{/uran/}
+
+Urędene \textipa{/ur’eNdEnE/}
+
+Urędnica \textipa{/ur’eNdnI\t{ts}a/}
+
+Urędnik \textipa{/ur’eNdnIk/}
+
+Urędnyǐ \textipa{/ur’eNdn1j/}
+
+Urędovati \textipa{/ur’eNdovatI/}
+
+Urođaǐ \textipa{/uro\t{d \textctz}aj/}
+
+Uspěh \textipa{/usp1x/}
+
+Ustanova \textipa{/ustanova/}
+
+Ustïë \textipa{/uscie/}
+
+Usto \textipa{/usto/}
+
+Uštůrb \textipa{/u\:st8rb/}
+
+Utro \textipa{/utro/}
+
+Utvor \textipa{/utvor/}
+
+Uvědomiti \textipa{/uv1domItI/}
+
+Uvod \textipa{/uvod/}
+
+Užas \textipa{/u \textctz as/}
+
+Užasnyǐ \textipa{/u \textctz asn1j/}
