--- a/content/Z.tex
+++ b/content/Z.tex
@@ -1,269 +1,522 @@
 \chapter{Z z}
 
-Za /za/
-Zaapa /zaapa/
-Zaapati /zaapatɪ/
-Zabastova /zabastova/
-Zabastovka /zabastovka/
-Zabavka /zabavka/
-Zabavnyǐ /zabavnɨj/
-Zabĭjati /zab’jiʝatɪ/
-Zabluda /zabluda/
-Zaboraviti /zaboravɪtɪ/
-Zabudnuti /zabudnutɪ/
-Začędlo /zat͡ɕeŋdlo/
-Začïnati /zat͡ɕinatɪ/
-Začto /zat͡ʃto/
-Začto /zat͡ʃto/
-Zad /zad/
-Zad /zad/
-Zada /zada/
-Zadača /zadat͡ʃa/
-Zadanïë /zadan’e/
-Zadatůk /zadatək/
-Zadavane /zadavanɛ/
-Zadek /zadɛk/
-Zadek /zadɛk/
-Zadnica /zadnɪt͡sa/
-Zadnyǐ /zadnɨj/
-Zadpęstïë /zadp’eŋsce/
-Zaglåvïë /zaɣlʌv’e/
-Zagranica /zaɣranɪt͡sa/
-Zagraničnyǐ /zaɣranɪt͡ʃnɨj/
-Zagreb /zaɣrɛb/
-Zahod /zaxod/
-Zahod /zaxod/
-Zahvátnik /zaxva: tnɪk/
-Zahvátnik /zaxva: tnɪk/
-Zaǐmęnik /zajm’eŋnɪk/
-Zajęc /zaeŋt͡s/
-Zajęčę /zaʝeŋt͡ɕeŋ/
-Zajęčïha /zaʝeŋt͡ɕixa/
-Zajęčik /zaʝeŋt͡ʃɪk/
-Zajęčik /zaʝeŋt͡ʃɪk/
-Zajednanyǐ /zaʝɛdnanɨj/
-Zajednati /zaʝɛdnatɪ/
-Zajedno /zaʝɛdno/
-Zajimati /zaʝɪmatɪ/
-Zajimstvo /zaʝɪmstvo/
-Zaklada /zaklada/
-Zakladane /zakladanɛ/
-Zakladanïë /zakladan’e/
-Zaklađati /zaklad͡ʑatɪ/
-Zaklüčak /zakʎʊ̈t͡ʃak/
-Zaklüčavane /zakʎʊ̈t͡ʃavanɛ/
-Zaklüček /zakʎʊ̈t͡ʃɛk/
-Zakončati /zakont͡ʃatɪ/
-Zakončiti /zakont͡ʃɪtɪ/
-Zakrivane /zakrɪvanɛ/
-Zakrųt /zakruŋt/
-Zakrųtka /zakruŋtka/
-Zalegati /zalɛɣatɪ/
-Zalïha /zaʎixa/
-Zalïv /zaʎiv/
-Zalïv /zaʎiv/
-Zalïvečnik /zaʎivɛt͡ʃnɪk/
-Zalïvka /zaʎivka/
-Zalog /zaloɣ/
-Zalübenyǐ /zaʎʊ̈bɛnɨj/
-Zalübiti /zaʎʊ̈bɪtɪ/
-Zalübiti sę /zaʎʊ̈bɪtɪ s’eŋ/
-Zaměna /zamᵻna/
-Zaměniti /zamᵻnɪtɪ/
-Zaměšek /zamᵻʂɛk/
-Zaměsto /zamᵻsto/
-Zamråznyǐ /zamrʌznɨj/
-Zamůk /zamək/
-Zamysůlj /zamɨsəʎ/
-Zanemočnuti /zanɛmot͡ʃnutɪ/
-Zanoviti /zanovɪtɪ/
-Zanovo /zanovo/
-Zaostroiti /zaostroɪtɪ/
-Zapad /zapad/
-Zapad /zapad/
-Zapah /zapax/
-Zapas /zapas/
-Zapętaja /zap’eŋtaʝa/
-Zapis lïčen /zapɪs ʎit͡ʃɛn/
-Zapis lïčen /zapɪs ʎit͡ʃɛn/
-Zapisatelj /zapɪsatɛʎ/
-Zapisj /zapɪs’/
-Započïnati sę /zapot͡ɕinatɪ s’eŋ/
-Zapoznati sę /zapoznatɪ s’eŋ/
-Zapytati /zapɨtatɪ/
-Zapytati /zapɨtatɪ/
-Zarádi /zara: dɪ/
-Zaránůk /zara: nək/
-Zaravnene /zaravnɛnɛ/
-Zaraz /zaraz/
-Zaraz /zaraz/
-Zasada /zasada/
-Zasaditi /zasadɪtɪ/
-Zasebnyǐ /zasɛbnɨj/
-Zasluga /zasluɣa/
-Zaslužennyǐ /zasluʐɛnnɨj/
-Zaslužiti /zasluʐɪtɪ/
-Zasnuti /zasnutɪ/
-Zastanuti sę /zastanutɪ s’eŋ/
-Zastěna /zastᵻna/
-Zastrašati /zastraʂatɪ/
-Zastųpiti /zastuŋpɪtɪ/
-Zastųpiti do žitïä /zastuŋpɪtɪ do ʐɪcæ/
-Zatęĝnuti /zaceŋgnutɪ/
-Zatęĝnuti /zaceŋgnutɪ/
-Zatišïë /zatɪʃe/
-Zatïsknuti /zacisknutɪ/
-Zatoga /zatoɣa/
-Zatoka /zatoka/
-Zatvorane /zatvoranɛ/
-Zatym /zatɨm/
-Zautra /zautra/
-Zavěsa /zavᵻsa/
-Zavět /zavᵻt/
-Zavïstj /zav’isc/
-Zavůrteček /zavərtɛt͡ʃɛk/
-Zavůrtek /zavərtɛk/
-Zbačiti /zbat͡ʃɪtɪ/
-Zbavläti /zbavʎætɪ/
-Zdě /zdᵻ/
-Zdesj /zdɛs’/
-Zděšnyǐ /zdᵻʂnɨj/
-Zdrada /zdrada/
-Zdraditi /zdradɪtɪ/
-Zdråveǐ /zdrʌvɛj/
-Zdråvïë /zdrʌv’e/
-Zdråvlë /zdrʌvʎe/
-Zdråvnica /zdrʌvnɪt͡sa/
-Zdråvnica /zdrʌvnɪt͡sa/
-Zdråvyǐ /zdrʌvɨj/
-Zdrovnica /zdrovnɪt͡sa/
-Zelenina /zɛlɛnɪna/
-Zelenovodstvo /zɛlɛnovodstvo/
-Želězo /ʐɛlᵻzo/
-Zëlo /z’elo/
-Zëlok /z’elok/
-Zëlok /z’elok/
-Zëlönyǐ /z’eʎœnɨj/
-Zemj /zɛm’/
-Zemlä /zɛmʎæ/
-Zemlěny /zɛmlᵻnɨ/
-Zemlötręs /zɛmʎœtr’eŋs/
-Zěv /zᵻv/
-Zěvati /zᵻvatɪ/
-Zěvota /zᵻvota/
-Zgniti /zɣnɪtɪ/
-Zgorelina /zɣorɛlɪna/
-Zïdanïë /z’idan’e/
-Zïgrati /z’iɣratɪ/
-Zïgrati sę /z’iɣratɪ s’eŋ/
-Zima /zɪma/
-Zizmala /zɪzmala/
-Zjědnuti /zʝᵻdnutɪ/
-Zjęviti sę /zeŋvɪtɪ s’eŋ/
-Zkazati /zkazatɪ/
-Zkråtka /zkrʌtka/
-Zlåtar /zlʌtar/
-Zlåto /zlʌto/
-Zlåtyǐ /zlʌtɨj/
-Zločïnec /zlot͡ɕinɛt͡s/
-Zločïnec /zlot͡ɕinɛt͡s/
-Zločïnnyǐ /zlot͡ɕinnɨj/
-Zločïnstvo /zlot͡ɕinstvo/
-Zločïnstvo /zlot͡ɕinstvo/
-Zloděǐ /zlodᵻj/
-Zloděǐstvo /zlodᵻjstvo/
-Zlodějane /zlodᵻʝanɛ/
-Zlodějec /zlodᵻʝɛt͡s/
-Zlopamętnyǐ /zlopam’eŋtnɨj/
+Za \textipa{/za/}
+
+Zaapa \textipa{/zaapa/}
+
+Zaapati \textipa{/zaapatI/}
+
+Zabastova \textipa{/zabastova/}
+
+Zabastovka \textipa{/zabastovka/}
+
+Zabavka \textipa{/zabavka/}
+
+Zabavnyǐ \textipa{/zabavn1j/}
+
+Zabĭjati \textipa{/zab’jiJatI/}
+
+Zabluda \textipa{/zabluda/}
+
+Zaboraviti \textipa{/zaboravItI/}
+
+Zabudnuti \textipa{/zabudnutI/}
+
+Začędlo \textipa{/za\t{tC}eNdlo/}
+
+Začïnati \textipa{/za\t{tC}inatI/}
+
+Začto \textipa{/za\t{tS}to/}
+
+Začto \textipa{/za\t{tS}to/}
+
+Zad \textipa{/zad/}
+
+Zad \textipa{/zad/}
+
+Zada \textipa{/zada/}
+
+Zadača \textipa{/zada\t{tS}a/}
+
+Zadanïë \textipa{/zadan’e/}
+
+Zadatůk \textipa{/zadat8k/}
+
+Zadavane \textipa{/zadavanE/}
+
+Zadek \textipa{/zadEk/}
+
+Zadek \textipa{/zadEk/}
+
+Zadnica \textipa{/zadnI\t{ts}a/}
+
+Zadnyǐ \textipa{/zadn1j/}
+
+Zadpęstïë \textipa{/zadp’eNsce/}
+
+Zaglåvïë \textipa{/zaGlAv’e/}
+
+Zagranica \textipa{/zaGranI\t{ts}a/}
+
+Zagraničnyǐ \textipa{/zaGranI\t{tS}n1j/}
+
+Zagreb \textipa{/zaGrEb/}
+
+Zahod \textipa{/zaxod/}
+
+Zahod \textipa{/zaxod/}
+
+Zahvátnik \textipa{/zaxva: tnIk/}
+
+Zahvátnik \textipa{/zaxva: tnIk/}
+
+Zaǐmęnik \textipa{/zajm’eNnIk/}
+
+Zajęc \textipa{/zaJeN\t{ts}/}
+
+Zajęčę \textipa{/zaJeN\t{tC}eN/}
+
+Zajęčïha \textipa{/zaJeN\t{tC}ixa/}
+
+Zajęčik \textipa{/zaJeN\t{tS}Ik/}
+
+Zajednanyǐ \textipa{/zaJEdnan1j/}
+
+Zajednati \textipa{/zaJEdnatI/}
+
+Zajedno \textipa{/zaJEdno/}
+
+Zajimati \textipa{/zaJImatI/}
+
+Zajimstvo \textipa{/zaJImstvo/}
+
+Zaklada \textipa{/zaklada/}
+
+Zakladane \textipa{/zakladanE/}
+
+Zakladanïë \textipa{/zakladan’e/}
+
+Zaklađati \textipa{/zakla\t{d \textctz}atI/}
+
+Zaklüčak \textipa{/zakLLU\t{tS}ak/}
+
+Zaklüčavane \textipa{/zakLU\t{tS}avanE/}
+
+Zaklüček \textipa{/zakLU\t{tS}Ek/}
+
+Zakončati \textipa{/zakon\t{tS}atI/}
+
+Zakončiti \textipa{/zakon\t{tS}ItI/}
+
+Zakrivane \textipa{/zakrIvanE/}
+
+Zakrųt \textipa{/zakruNt/}
+
+Zakrųtka \textipa{/zakruNtka/}
+
+Zalegati \textipa{/zalEGatI/}
+
+Zalïha \textipa{/zaLixa/}
+
+Zalïv \textipa{/zaLiv/}
+
+Zalïvečnik \textipa{/zaLivE\t{tS}nIk/}
+
+Zalïvka \textipa{/zaLivka/}
+
+Zalog \textipa{/zaloG/}
+
+Zalübenyǐ \textipa{/zaLUbEn1j/}
+
+Zalübiti \textipa{/zaLUbItI/}
+
+Zalübiti sę \textipa{/zaLUbItI s’eN/}
+
+Zaměna \textipa{/zam1na/}
+
+Zaměniti \textipa{/zam1nItI/}
+
+Zaměšek \textipa{/zam1\:sEk/}
+
+Zaměsto \textipa{/zam1sto/}
+
+Zamråznyǐ \textipa{/zamrAzn1j/}
+
+Zamůk \textipa{/zam8k/}
+
+Zamysůlj \textipa{/zam1s8L/}
+
+Zanemočnuti \textipa{/zanEmo\t{tS}nutI/}
+
+Zanoviti \textipa{/zanovItI/}
+
+Zanovo \textipa{/zanovo/}
+
+Zaostroiti \textipa{/zaostroItI/}
+
+Zapad \textipa{/zapad/}
+
+Zapah \textipa{/zapax/}
+
+Zapas \textipa{/zapas/}
+
+Zapętaja \textipa{/zap’eNtaJa/}
+
+Zapis lïčen \textipa{/zapIs Li\t{tS}En/}
+
+Zapisatelj \textipa{/zapIsatEL/}
+
+Zapisj \textipa{/zapIs’/}
+
+Započïnati sę \textipa{/zapo\t{tC}inatI s’eN/}
+
+Zapoznati sę \textipa{/zapoznatI s’eN/}
+
+Zapytati \textipa{/zap1tatI/}
+
+Zarádi \textipa{/zara:dI/}
+
+Zaránůk \textipa{/zara:n8k/}
+
+Zaravnene \textipa{/zaravnEnE/}
+
+Zaraz \textipa{/zaraz/}
+
+Zaraz \textipa{/zaraz/}
+
+Zasada \textipa{/zasada/}
+
+Zasaditi \textipa{/zasadItI/}
+
+Zasebnyǐ \textipa{/zasEbn1j/}
+
+Zasluga \textipa{/zasluGa/}
+
+Zaslužennyǐ \textipa{/zaslu\textctz Enn1j/}
+
+Zaslužiti \textipa{/zaslu\textctz ItI/}
+
+Zasnuti \textipa{/zasnutI/}
+
+Zastanuti sę \textipa{/zastanutI s’eN/}
+
+Zastěna \textipa{/zast1na/}
+
+Zastrašati \textipa{/zastra\:satI/}
+
+Zastųpiti \textipa{/zastuNpItI/}
+
+Zastųpiti do žitïä \textipa{/zastNNpItI do \textctz Icæ/}
+
+Zatęĝnuti \textipa{/zaceNgnutI/}
+
+Zatišïë \textipa{/zatISe/}
+
+Zatïsknuti \textipa{/zacisknutI/}
+
+Zatoga \textipa{/zatoGa/}
+
+Zatoka \textipa{/zatoka/}
+
+Zatvorane \textipa{/zatvoranE/}
+
+Zatym \textipa{/zat1m/}
+
+Zautra \textipa{/zautra/}
+
+Zavěsa \textipa{/zav1sa/}
+
+Zavět \textipa{/zav1t/}
+
+Zavïstj \textipa{/zav’isc/}
+
+Zavůrteček \textipa{/zav8rtE\t{tS}Ek/}
+
+Zavůrtek \textipa{/zav8rtEk/}
+
+Zbačiti \textipa{/zba\t{tS}ItI/}
+
+Zbavläti \textipa{/zbavLætI/}
+
+Zdě \textipa{/zd1/}
+
+Zdesj \textipa{/zdEs’/}
+
+Zděšnyǐ \textipa{/zd1\:sn1j/}
+
+Zdrada \textipa{/zdrada/}
+
+Zdraditi \textipa{/zdradItI/}
+
+Zdråveǐ \textipa{/zdrAvEj/}
+
+Zdråvïë \textipa{/zdrAv’e/}
+
+Zdråvlë \textipa{/zdrAvLe/}
+
+Zdråvnica \textipa{/zdrAvnI\t{ts}a/}
+
+Zdråvnica \textipa{/zdrAvnI\t{ts}a/}
+
+Zdråvyǐ \textipa{/zdrAv1j/}
+
+Zdrovnica \textipa{/zdrAvnI\t{ts}a/}
+
+Zelenina \textipa{/zElEnIna/}
+
+Zelenovodstvo \textipa{/zElEnovodstvo/}
+
+Želězo \textipa{/\textctz El1zo/}
+
+Zëlo \textipa{/z’elo/}
+
+Zëlok \textipa{/z’elok/}
+
+Zëlönyǐ \textipa{/z’eLœn1j/}
+
+Zemj \textipa{/zEm’/}
+
+Zemlä \textipa{/zEmLæ/}
+
+Zemlěny \textipa{/zEml1n1/}
+
+Zemlötręs \textipa{/zEmLœtr’eNs/}
+
+Zěv \textipa{/z1v/}
+
+Zěvati \textipa{/z1vatI/}
+
+Zěvota \textipa{/z1vota/}
+
+Zgniti \textipa{/zGnItI/}
+
+Zgorelina \textipa{/zGorElIna/}
+
+Zïdanïë \textipa{/z’idan’e/}
+
+Zïgrati \textipa{/z’iGratI/}
+
+Zïgrati sę \textipa{/z’iGratI s’eN/}
+
+Zima \textipa{/zIma/}
+
+Zizmala \textipa{/zIzmala/}
+
+Zjědnuti \textipa{/zJ1dnutI/}
+
+Zjęviti sę \textipa{/zeNvItI s’eN/}
+
+Zkazati \textipa{/zkazatI/}
+
+Zkråtka \textipa{/zkrAtka/}
+
+Zlåtar \textipa{/zlAtar/}
+
+Zlåto \textipa{/zlAto/}
+
+Zlåtyǐ \textipa{/zlAt1j/}
+
+Zločïnec \textipa{/zlo\t{tC}inE\t{ts}/}
+
+Zločïnec \textipa{/zlo\t{tC}inE\t{ts}/}
+
+Zločïnnyǐ \textipa{/zlo\t{tC}inn1j/}
+
+Zločïnstvo /zlo\t{tC}instvo/
+
+Zločïnstvo /zlo\t{tC}instvo/
+
+Zloděǐ /zlod1j/
+
+Zloděǐstvo /zlod1jstvo/
+
+Zlodějane /zlod1JanE/
+
+Zlodějec /zlod1JE\t{ts}/
+
+Zlopamętnyǐ /zlopam’eNtn1j/
+
 Zlostj /zlosc/
-Zlydenj /zlɨdɛn’/
-Zlyǐ /zlɨj/
-Zmazati /zmazatɪ/
-Změǐ /zmᵻj/
-Změǐ /zmᵻj/
-Změna /zmᵻna/
-Změnivec /zmᵻnɪvɛt͡s/
-Zmętůk /zm’eŋtək/
-Zmija /zmɪʝa/
-Zmija /zmɪʝa/
-Zmijalica /zmɪʝalɪt͡sa/
-Zmogati /zmoɣatɪ/
-Zmråznica /zmrʌznɪt͡sa/
-Zmůragd /zməraɣd/
-Zmyti /zmɨtɪ/
-Zmyti sę /zmɨtɪ s’eŋ/
-Značędla /znat͡ɕeŋdla/
-Značene /znat͡ʃɛnɛ/
-Značka /znat͡ʃka/
-Značnostj /znat͡ʃnosc/
-Znajomec /znaʝomɛt͡s/
-Znajomyǐ /znaʝomɨj/
+
+Zlydenj /zl1dEn’/
+
+Zlyǐ /zl1j/
+
+Zmazati /zmazatI/
+
+Změǐ /zm1j/
+
+Změǐ /zm1j/
+
+Změna /zm1na/
+
+Změnivec /zm1nIvE\t{ts}/
+
+Zmętůk /zm’eNt8k/
+
+Zmija /zmIJa/
+
+Zmija /zmIJa/
+
+Zmijalica /zmIJalI\t{ts}a/
+
+Zmogati /zmoGatI/
+
+Zmråznica /zmrAznI\t{ts}a/
+
+Zmůragd /zm8raGd/
+
+Zmyti /zm1tI/
+
+Zmyti sę /zm1tI s’eN/
+
+Značędla /zna\t{tC}eNdla/
+
+Značene /zna\t{tS}EnE/
+
+Značka /zna\t{tS}ka/
+
+Značnostj /zna\t{tS}nosc/
+
+Znajomec /znaJomE\t{ts}/
+
+Znajomyǐ /znaJom1j/
+
 Znak /znak/
+
 Znak /znak/
-Znakomec /znakomɛt͡s/
-Znakomyǐ /znakomɨj/
-Znakóvina /znako: vɪna/
-Znakóvnik /znako: vnɪk/
+
+Znakomec /znakomE\t{ts}/
+
+Znakomyǐ /znakom1j/
+
+Znakóvina /znako: vIna/
+
+Znakóvnik /znako: vnIk/
+
 Znakóvstvo /znako: vstvo/
-Znamę /znam’eŋ/
-Znamę /znam’eŋ/
+
+Znamę /znam’eN/
+
+Znamę /znam’eN/
+
 Znamka /znamka/
+
 Znanïë /znan’e/
-Znanyǐ /znanɨj/
-Znati /znatɪ/
-Znavane /znavanɛ/
-Znavati /znavatɪ/
-Znïmek /zn’imɛk/
+
+Znanyǐ /znan1j/
+
+Znati /znatI/
+
+Znavane /znavanE/
+
+Znavati /znavatI/
+
+Znïmek /zn’imEk/
+
 Znïzu /zn’izu/
+
 Znovu /znovu/
+
 Znovu /znovu/
+
 Zora /zora/
+
 Zora /zora/
-Zôstati sę /zʊstatɪ s’eŋ/
-Zovati /zovatɪ/
-Zovati /zovatɪ/
-Zpęt /zp’eŋt/
-Zplünka /zpʎʊ̈nka/
-Zpodency /zpodɛnt͡sɨ/
-Zposôb /zposʊb/
+
+Zôstati sę /zUstatI s’eN/
+
+Zovati /zovatI/
+
+Zovati /zovatI/
+
+Zpęt /zp’eNt/
+
+Zplünka /zpL\:Unka/
+
+Zpodency /zpodEn\t{ts}1/
+
+Zposôb /zposUb/
+
 Zprava /zprava/
-Způlniti /zpəlnɪtɪ/
-Zrobiti /zrobɪtɪ/
-Zrušati /zruʂatɪ/
-Ztęĝnuti /zceŋgnutɪ/
-Ztelesnuti /ztɛlɛsnutɪ/
-Ztěrka /ztᵻrka/
-Ztvoriti /ztvorɪtɪ/
+
+Způlniti /zp8lnItI/
+
+Zrobiti /zrobItI/
+
+Zrušati /zru\:satI/
+
+Ztęĝnuti /zceNgnutI/
+
+Ztelesnuti /ztElEsnutI/
+
+Ztěrka /zt1rka/
+
+Ztvoriti /ztvorItI/
+
 Ztvornostj /ztvornosc/
-Zųb /zuŋb/
-Zųbar /zuŋbar/
-Zůrcadelnyǐ /zərt͡sadɛlnɨj/
-Zůrcadlo /zərt͡sadlo/
-Zůrno /zərno/
-Zůrnóvyǐ /zərno: vɨj/
-Zvažiti /zvaʐɪtɪ/
-Zvěrati /zvᵻratɪ/
-Zvěrin /zvᵻrɪn/
-Zvěrinec /zvᵻrɪnɛt͡s/
-Zvěrj /zvᵻr’/
-Zvěrnyǐ /zvᵻrnɨj/
-Zvěrolěčba /zvᵻrolᵻt͡ʃba/
-Zvěrolěkar /zvᵻrolᵻkar/
-Zvěrolov /zvᵻrolov/
-Zvěrstvo /zvᵻrstvo/
-Zvěrstvovati /zvᵻrstvovatɪ/
-Zvladati /zvladatɪ/
-Zvôlene /zvʊlɛnɛ/
-Zvôlenïë /zvʊlɛn’e/
-Zvôljnyǐ /zvʊʎnɨj/
-Zvųčane /zvuŋt͡ʃanɛ/
-Zvųčnica /zvuŋt͡ʃnɪt͡sa/
-Zvųčnyǐ /zvuŋt͡ʃnɨj/
-Zvųk /zvuŋk/
-Zvųkozapis /zvuŋkozapɪs/
-Zvųzka /zvuŋzka/
-Zvųzůk /zvuŋzək/
-Zybati /zɨbatɪ/
-Zybj /zɨb’/
-Zybka /zɨbka/
-Zybkyǐ /zɨbkɨj/
+
+Zųb /zuNb/
+
+Zųbar /zuNbar/
+
+Zůrcadelnyǐ /z8r\t{ts}adEln1j/
+
+Zůrcadlo /z8r\t{ts}adlo/
+
+Zůrno /z8rno/
+
+Zůrnóvyǐ /z8rno: v1j/
+
+Zvažiti /zva\textctz ItI/
+
+
+Zvěrati /zv1ratI/
+
+Zvěrin /zv1rIn/
+
+Zvěrinec /zv1rInE\t{ts}/
+
+Zvěrj /zv1r’/
+
+Zvěrnyǐ /zv1rn1j/
+
+Zvěrolěčba /zv1rol1\t{tS}ba/
+
+Zvěrolěkar /zv1rol1kar/
+
+Zvěrolov /zv1rolov/
+
+Zvěrstvo /zv1rstvo/
+
+Zvěrstvovati /zv1rstvovatI/
+
+Zvladati /zvladatI/
+
+Zvôlene /zvUlEnE/
+
+Zvôlenïë /zvUlEn’e/
+
+Zvôljnyǐ /zvULn1j/
+
+Zvųčane /zvuN\t{tS}anE/
+
+Zvųčnica /zvuN\t{tS}nI\t{ts}a/
+
+Zvųčnyǐ /zvuN\t{tS}n1j/
+
+Zvųk /zvuNk/
+
+Zvųkozapis /zvuNkozapIs/
+
+Zvųzka /zvuNzka/
+
+Zvųzůk /zvuNz8k/
+
+Zybati /z1batI/
+
+Zybj /z1b’/
+
+Zybka /z1bka/
+
+Zybkyǐ /z1bk1j/
