--- a/main.tex
+++ b/main.tex
@@ -57,7 +57,7 @@
 \include{./content/B}
 \include{./content/C}
 \include{./content/CX}
-% \include{./content/D}
+\include{./content/D}
 
 
 \include{./content/F}
@@ -74,7 +74,6 @@
 % \include{./content/É}
 % \include{./content/Ě}
 % \include{./content/Ž}
-% \include{./content/Z}
 % \include{./content/I}
 % \include{./content/Ï}
 % \include{./content/J}
@@ -91,8 +90,9 @@
 % \include{./content/Ŝ}
 % \include{./content/T}
 \include{./content/TX}
-% \include{./content/U}
+\include{./content/U}
 \include{./content/UN}
+\include{./content/Z}
 
 
 % \include{./content/Š}
